# pywakeonlan

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  LICENSE.rst  README.md  README.rst  dev-requirements.txt  flake8-requirements.txt  pyproject.toml  setup.cfg  setup.py  test_wakeonlan.py  tox.ini  wakeonlan.py
.github/workflows/: ci.yaml  codeql-analysis.yml  test.yaml
docs/: apidocs.rst  conf.py  index.rst  readme.rst  requirements.txt
script/: wol
wakeonlan/: __init__.py  wakeonlan.py  wol.py
