[project]
name = "wakeonlan"
version = "3.3.0"
description = "A small python module for wake on lan."
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "Remco Haszing", email = "remcohaszing@gmail.com" }
]
dynamic = ["classifiers"]

[project.urls]
Source = "https://github.com/remcohaszing/pywakeonlan"
Documentation = "http://pywakeonlan.readthedocs.io"
Changelog = "https://github.com/remcohaszing/pywakeonlan/releases"
Issues = "https://github.com/remcohaszing/pywakeonlan/issues"
Funding = "https://github.com/sponsors/remcohaszing"

[project.scripts]
wakeonlan = "wakeonlan:main"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Typing :: Typed"
]

[tool.poetry.group.dev.dependencies]
coverage = { version = "*" }
mypy = { version = "*" }
ruff = { version = "*" }
sphinx = { version = "*" }
sphinx-rtd-theme = { version = "*" }

[tool.coverage.run]
branch = true
command_line = "-m unittest -v"
source = ["wakeonlan"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_return_any = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "W"]
ignore = ["D200", "D212", "E501", "W505"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
